# KooDynaErrorAnalyzer

./: .gitignore  README.md  Untitled  build_linux.sh  build_windows.bat  build_windows.ps1  install.bat  install.sh  koodyna.bat  koodyna.sh  pyproject.toml
docs/: ASCII_FILE_GUIDE.md
src/koodyna/: __init__.py  __main__.py  analyzer.py  cli.py  models.py
src/koodyna/analysis/: contact.py  diagnostics.py  energy.py  failure_analysis.py  numerical_instability.py  performance.py  timestep.py  warnings.py
src/koodyna/knowledge/: error_db.py
src/koodyna/parsers/: bndout.py  d3hsp.py  element_mapper.py  glstat.py  matsum.py  messag.py  nodout.py  profile.py  status.py
src/koodyna/report/: html_report.py  json_report.py  terminal.py
